# Smart-Home-Energy-Monitoring-Backend

./: .env.example  Dockerfile  README.md  SYSTEM_DESIGN.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: c5e4a4bbf824_initial_migration.py
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  api.py
app/api/v1/endpoints/: __init__.py  auth.py  chat.py  telemetry.py
app/core/: __init__.py  config.py  database.py  deps.py  logging.py  redis_client.py  security.py
app/models/: __init__.py  device.py  telemetry.py  user.py
app/schemas/: __init__.py  chat.py  telemetry.py  user.py
app/services/: __init__.py  ai_service.py  telemetry_service.py  user_service.py
scripts/: simulate-telemetry.py
